<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:text="@string/account_sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/red"/>

    <EditText
        android:id="@+id/accountUsername"
        android:inputType="text"
        android:hint="@string/account_username_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/accountPassword"
        android:inputType="textPassword"
        android:hint="@string/account_username_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/accountSignIn"
        android:text="@string/account_sign_in_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>